--- a/index.html
+++ b/index.html
@@ -1,126 +1,188 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
   <meta charset="UTF-8">
   <title>Accueil - Ma To-Do List</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
+    /* 🌈 Style global */
+    * {
       margin: 0;
-      scroll-behavior: smooth;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Poppins", "Segoe UI", sans-serif;
     }
 
+    html, body {
+      scroll-behavior: smooth;
+      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+      color: #333;
+      overflow-x: hidden;
+    }
+
+    /* 💎 Page d’accueil */
     .welcome-box {
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #74ebd5 0%, #ACB6E5 100%);
+      background: linear-gradient(135deg, #4facfe, #00f2fe);
       text-align: center;
-      color: #333;
+      animation: fadeIn 1.5s ease-in-out;
     }
 
     .welcome-content {
       background: white;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      display: inline-block;
+      padding: 50px 60px;
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      max-width: 90%;
+      width: 420px;
+    }
+
+    .welcome-content:hover {
+      transform: scale(1.02);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
     }
 
     .welcome-content h1 {
-      font-size: 3em;
+      font-size: 2.5em;
       color: #007bff;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
+      font-weight: 700;
     }
 
     .welcome-content p {
-      font-size: 1.2em;
-      margin-bottom: 30px;
+      font-size: 1.1em;
+      margin-bottom: 25px;
+      color: #555;
     }
 
     .welcome-content a {
       display: inline-block;
-      padding: 12px 25px;
-      background: #28a745;
+      padding: 14px 35px;
+      background: linear-gradient(135deg, #007bff, #00c6ff);
       color: white;
       text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
-      transition: 0.3s;
-      cursor: pointer;
+      border-radius: 50px;
+      font-weight: 600;
+      transition: background 0.4s ease, transform 0.2s ease;
     }
 
     .welcome-content a:hover {
-      background: #218838;
+      background: linear-gradient(135deg, #0056d2, #0096c7);
+      transform: scale(1.05);
     }
 
+    /* 🧭 Section principale */
     #first {
-      height: 100vh;
-      background: linear-gradient(135deg, #74ebd5 0%, #ACB6E5 100%);
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
+      background: linear-gradient(135deg, #00f2fe, #4facfe);
+      padding-bottom: 40px;
+      animation: fadeInUp 1.2s ease-in-out;
     }
 
     header {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 20vh;
-      font-size: 4em;
-      font-weight: bold;
-      color: white;
-      background: #007bff;
-      text-align: center;
       width: 100%;
+      padding: 25px 0;
+      text-align: center;
+      font-size: 2.8em;
+      font-weight: 700;
+      color: white;
+      background: rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(5px);
+      letter-spacing: 2px;
     }
 
     .mai {
-      min-height: 80vh;
+      flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       gap: 20px;
+      padding: 20px;
+      width: 100%;
     }
 
-    button,
-    a {
+    /* 🟢 Boutons */
+    button, a {
       display: inline-block;
-      padding: 15px 30px;
-      background: #28a792;
+      padding: 14px 35px;
+      background: linear-gradient(135deg, #00b09b, #96c93d);
       color: white;
       text-decoration: none;
-      border-radius: 10px;
-      font-weight: bold;
+      border-radius: 50px;
+      font-weight: 600;
       border: none;
       cursor: pointer;
-      transition: 0.3s;
-      font-size: 1.1em;
+      transition: all 0.3s ease;
+      font-size: 1em;
     }
 
-    button:hover,
-    a:hover {
-      background: #218838;
+    button:hover, a:hover {
+      background: linear-gradient(135deg, #009879, #7bbf29);
+      transform: scale(1.05);
     }
 
+    /* 🧾 Formulaire */
     .form-container {
       display: none;
-      margin-top: 20px;
+      flex-direction: column;
       background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
+      width: 90%;
+      max-width: 400px;
+      animation: fadeInUp 0.5s ease-in-out;
     }
 
     .form-container input {
-      padding: 10px;
-      width: 250px;
+      margin: 10px 0;
+      padding: 12px;
+      width: 100%;
       border: 1px solid #ccc;
-      border-radius: 5px;
-      margin: 5px 0;
+      border-radius: 8px;
+      font-size: 1em;
+      transition: border-color 0.3s;
+    }
+
+    .form-container input:focus {
+      border-color: #007bff;
+      outline: none;
+      box-shadow: 0 0 6px rgba(0, 123, 255, 0.3);
+    }
+
+    /* 📱 Responsive */
+    @media (max-width: 768px) {
+      .welcome-content {
+        padding: 35px 25px;
+      }
+      .welcome-content h1 {
+        font-size: 2em;
+      }
+      header {
+        font-size: 2em;
+      }
+      button, a {
+        padding: 12px 25px;
+        font-size: 0.95em;
+      }
+    }
+
+    /* ✨ Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(40px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
@@ -129,7 +191,7 @@
   <div class="welcome-box">
     <div class="welcome-content">
       <h1>Bienvenue 👋</h1>
-      <p>Organisez vos tâches facilement avec notre application To-Do List.</p>
+      <p>Organisez vos tâches efficacement avec notre To-Do List intelligente.</p>
       <a onclick="scrollToFirst()">Accéder à ma To-Do List</a>
     </div>
   </div>
@@ -152,85 +214,66 @@
   </div>
 
   <script>
-// ---------------------------------------------
-// 🔹 1️⃣ Fonction pour faire défiler la page
-// ---------------------------------------------
-function scrollToFirst() {
-  document.getElementById("first").scrollIntoView({ behavior: "smooth" });
-}
-
-// ---------------------------------------------
-// 🔹 2️⃣ Afficher / cacher le formulaire
-// ---------------------------------------------
-function toggleForm() {
-  const form = document.getElementById("formBox");
-  form.style.display = (form.style.display === "block") ? "none" : "block";
-}
-
-// ---------------------------------------------
-// 🔹 3️⃣ Fonction pour ajouter une tâche
-// ---------------------------------------------
-function addTask() {
-  const title = document.getElementById("taskInput").value.trim();
-  const date = document.getElementById("taskDate").value;
-  const time = document.getElementById("taskTime").value;
-
-  if (!title || !date || !time) {
-    alert("Veuillez remplir tous les champs !");
-    return;
-  }
-
-  const newTask = {
-    title: title,
-    createdAt: new Date().toISOString(),
-    dueDate: date,
-    dueTime: time
-  };
-
-  let tasks = JSON.parse(localStorage.getItem("tasks")) || [];
-  tasks.push(newTask);
-  localStorage.setItem("tasks", JSON.stringify(tasks));
-
-  alert("✅ Tâche ajoutée avec succès !");
-  document.getElementById("taskInput").value = "";
-  document.getElementById("taskDate").value = "";
-  document.getElementById("taskTime").value = "";
-  document.getElementById("formBox").style.display = "none";
-}
-
-// ---------------------------------------------
-// 🔹 4️⃣ Fonction pour demander la permission
-// ---------------------------------------------
-function askNotificationPermission() {
-  if (!("Notification" in window)) {
-    alert("⚠️ Ce navigateur ne supporte pas les notifications.");
-    return;
-  }
-
-  Notification.requestPermission().then(permission => {
-    if (permission === "granted") {
-      alert("✅ Notifications activées !");
-      // 🔹 Test immédiat pour vérifier que ça marche
-      new Notification("🔔 Test de notification", {
-        body: "Les notifications fonctionnent correctement !",
-        icon: "https://cdn-icons-png.flaticon.com/512/1827/1827379.png"
-      });
-    } else {
-      alert("❌ Vous avez refusé les notifications.");
+    // Ton JavaScript d’origine reste inchangé
+    function scrollToFirst() {
+      document.getElementById("first").scrollIntoView({ behavior: "smooth" });
     }
-  });
-}
 
-// ---------------------------------------------
-// 🔹 5️⃣ On attend le clic sur “Accéder à ma To-Do List”
-// ---------------------------------------------
-document.addEventListener("DOMContentLoaded", () => {
-  const accessBtn = document.querySelector(".welcome-content a");
-  accessBtn.addEventListener("click", () => {
-    askNotificationPermission();
-  });
-});
-</script>
+    function toggleForm() {
+      const form = document.getElementById("formBox");
+      form.style.display = (form.style.display === "flex") ? "none" : "flex";
+    }
 
+    function addTask() {
+      const title = document.getElementById("taskInput").value.trim();
+      const date = document.getElementById("taskDate").value;
+      const time = document.getElementById("taskTime").value;
+
+      if (!title || !date || !time) {
+        alert("Veuillez remplir tous les champs !");
+        return;
+      }
+
+      const newTask = {
+        title: title,
+        createdAt: new Date().toISOString(),
+        dueDate: date,
+        dueTime: time
+      };
+
+      let tasks = JSON.parse(localStorage.getItem("tasks")) || [];
+      tasks.push(newTask);
+      localStorage.setItem("tasks", JSON.stringify(tasks));
+
+      alert("✅ Tâche ajoutée avec succès !");
+      document.getElementById("taskInput").value = "";
+      document.getElementById("taskDate").value = "";
+      document.getElementById("taskTime").value = "";
+      document.getElementById("formBox").style.display = "none";
+    }
+
+    function askNotificationPermission() {
+      if (!("Notification" in window)) {
+        alert("⚠️ Ce navigateur ne supporte pas les notifications.");
+        return;
+      }
+
+      Notification.requestPermission().then(permission => {
+        if (permission === "granted") {
+          new Notification("🔔 Test de notification", {
+            body: "Les notifications fonctionnent correctement !",
+            icon: "https://cdn-icons-png.flaticon.com/512/1827/1827379.png"
+          });
+        }
+      });
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      const accessBtn = document.querySelector(".welcome-content a");
+      accessBtn.addEventListener("click", () => {
+        askNotificationPermission();
+      });
+    });
+  </script>
 </body>
 </html>
